--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,8 @@
 {
-    "dotnet.defaultSolution": "logger.slnx"
+    "dotnet.defaultSolution": "logger.slnx",
+    "editor.codeActionsOnSave": {
+        "source.organizeImports": "never"
+    },
+    "editor.formatOnSave": true,
+    "editor.defaultFormatter": "csharpier.csharpier-vscode",
 }
