--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,4 +5,7 @@
     },
     "editor.formatOnSave": true,
     "editor.defaultFormatter": "csharpier.csharpier-vscode",
+    "[json]": {
+        "editor.defaultFormatter": "vscode.json-language-features"
+    },
 }
